# ROMulus

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  build-portable.ps1  pyproject.toml  romulus.spec
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  release.yml
data/gamedb/: amiga.json  atari2600.json  atari5200.json  atari7800.json  atarist.json  c64.json  casioloopy.json  colecovision.json  dreamcast.json  gamecom.json  gamecube.json  gamegear.json  gb.json  gba.json  gbc.json  jaguar.json  lynx.json  mastersystem.json  megadrive.json  msx.json  n64.json  n64dd.json  nes.json  ngp.json  ngpc.json  pcengine.json  psp.json  satellaview.json  saturn.json  sega32x.json  segapico.json  sg1000.json  sufami.json  supergrafx.json  supervision.json  vectrex.json  wii.json  wonderswan.json  wonderswancolor.json  xbox360.json
data/profiles/: onionos.yaml  retropie.yaml
docs/: CREDITS.md  KNOWN-ISSUES.md  ROM-DEDUP-METHODOLOGY.md  ROM-FORMATS-REFERENCE.md  ROM-LIBRARY-ANALYSIS-REPORT.md  TECHNICAL_PLAN.md  architecture.md  forking-with-claude-code.md  import-design.md  rom-manager-feature-inventory.md  strict-1to1-design.md  sync-design.md
docs/reviews/: code-quality-v0.1.0.md  python-craft-v0.1.0.md  security-v0.1.0.md
docs/sessions/: 00-bootstrap.md  01-data-models.md  02-scanner.md  03-identifier.md  04-review.md  05-ui-shell.md  06-metadata.md  07-detail-panel.md  08-review.md  09-organizer.md  10-exporter.md  11-final-review.md  12-import-roms.md  13-rom-keyed-schema.md  14-rom-keyed-scanner.md  15-rom-keyed-metadata.md  16-rom-keyed-exporter-sync.md  17-rom-keyed-organizer.md  18-rom-keyed-ui.md  19-rom-keyed-tests.md
profiles/: analogue-pocket.yaml  mister.yaml  retropie.yaml
scripts/: download_gamedb.py  download_libretro_metadat.py  extract_system_logos.py  generate_icon.py
src/romulus/: __init__.py  __main__.py  app.py
src/romulus/core/: __init__.py  _n64.py  _no_intro_tokens.py  atomic.py  dat_parser.py  dest_inventory.py  exporter.py  hasher.py  identifier.py  importer.py  local_cover_finder.py  organizer.py  scanner.py  scrub.py  sync.py
src/romulus/data/: __init__.py
src/romulus/data/profiles/: __init__.py  analogue-pocket.yaml  anbernic-rglauncher.yaml  batocera.yaml  mister.yaml  muos.yaml  onionos.yaml  retropie.yaml
src/romulus/db/: __init__.py  config.py  connection.py  queries.py  schema.py
src/romulus/metadata/: __init__.py  _types.py  gamedb.py  hasheous.py  launchbox.py  libretro.py  libretro_metadat.py  screenscraper.py  thegamesdb.py
src/romulus/models/: __init__.py  game.py  profile.py  rom.py  system.py
src/romulus/ui/: __init__.py  _grouped_tree.py  _progress_layout.py  clean_missing_progress.py  cover_options_dialog.py  dest_scan_progress.py  detail_panel.py  enrich_options_dialog.py  enrich_progress.py  export_dialog.py  game_table.py  heavy_scan_progress.py  import_dialog.py  local_cover_progress.py  main_window.py  organize_preview.py  per_system_summary_dialog.py  scan_progress.py  scrub_dialog.py  scrub_progress.py  settings_dialog.py  sync_diff_progress.py  sync_preview.py  system_sidebar.py  workers.py
src/romulus/ui/artwork/: __init__.py
src/romulus/ui/themes/: __init__.py  dark.qss  dreamcast.qss  gamegear.qss  light.qss  mario.qss  n64.qss  neogeo.qss  playstation.qss  wbm_classic.qss
systems/: builtin.yaml
tests/: __init__.py  conftest.py  test_collections.py  test_covers.py  test_dat_parser.py  test_db.py  test_dest_inventory.py  test_exporter.py  test_filename_parser.py  test_hasher.py  test_identifier.py  test_importer.py  test_library_cleanup.py  test_local_cover_finder.py  test_logging.py  test_metadata.py  test_models.py  test_organizer.py  test_packaging.py  test_per_system_summary_dialog.py  test_scanner.py  test_scoped_actions.py  test_scrub.py  test_sync.py  test_sync_fixes.py  test_sync_preview.py  test_system_registry.py  test_ui.py
