[project]
name = "romulus"
version = "0.1.0"
description = "Local-first desktop ROM collection manager for retro game consoles"
requires-python = ">=3.12"
dependencies = [
    "PySide6",
    "httpx",
    "pydantic",
    "structlog",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
romulus = "romulus.__main__:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Qt subclasses must override camelCase methods (rowCount, columnCount, headerData,
# data) to satisfy the QAbstractItemModel API; renaming them to snake_case would
# break Qt's model/view binding.
"src/romulus/ui/*.py" = ["N802"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the built-in destination profiles inside the wheel so a
# ``pip install .`` produces a working app. Loaded via importlib.resources
# in romulus.core.exporter (no more brittle ``parents[3]`` calculation).
"romulus.data.profiles" = ["*.yaml"]
