[project]
name = "romulus"
version = "0.1.0"
description = "Local-first desktop ROM collection manager for retro game consoles"
requires-python = ">=3.12"
dependencies = [
    # Minimum version bounds pinned per security audit v0.1.0 finding #9:
    # without them a fresh resolve could install pydantic v1 (the code uses v2
    # idioms) or an httpx version with known CVEs. defusedxml is required to
    # block XML billion-laughs DoS against user-supplied DAT and LaunchBox
    # XMLs (finding #3).
    "PySide6>=6.6",
    "httpx>=0.27",
    "pydantic>=2.5",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    # PyInstaller is only needed by the portable-zip release workflow; it's
    # opt-in so a plain ``pip install -e ".[dev]"`` doesn't pull a 100 MB
    # extra for contributors who only run tests.
    "pyinstaller>=6.0",
]

[project.scripts]
romulus = "romulus.__main__:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Qt subclasses must override camelCase methods (rowCount, columnCount, headerData,
# data) to satisfy the QAbstractItemModel API; renaming them to snake_case would
# break Qt's model/view binding.
"src/romulus/ui/*.py" = ["N802"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# v0.2.0 moves destination profiles and the system registry OUT of the wheel
# and to the install root (``profiles/``, ``systems/``) so a user can edit
# them without digging into Python's site-packages. The legacy
# ``romulus.data.profiles`` subpackage remains importable (it's now an empty
# shim) so any third-party tooling that did ``importlib.resources.files``
# against it still gets a usable Path. Nothing is bundled inside the wheel
# anymore.
